AutoMapperAdd ,ArticleAddDto, ArticleUpdateDto

--- a/Blog.Services/Blog.Services.csproj
+++ b/Blog.Services/Blog.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Blog.Data\Blog.Data.csproj" />
     <ProjectReference Include="..\Blog.Entities\Blog.Entities.csproj" />
     <ProjectReference Include="..\Blog.Shared\Blog.Shared.csproj" />
