CategoryManager. category index.js

--- a/Blog.Mvc/Blog.Mvc.csproj
+++ b/Blog.Mvc/Blog.Mvc.csproj
@@ -19,4 +19,11 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Areas\Admin\Views\Category\_CategoryUpdatePartial.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
