--- a/Blog.Services/Blog.Services.csproj
+++ b/Blog.Services/Blog.Services.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Blog.Shared\Blog.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utilities\" />
+  </ItemGroup>
+
 </Project>
