--- a/Blog.Mvc/appsettings.Development.json
+++ b/Blog.Mvc/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LocalDB": "Data Source=DESKTOP-UO2Q254;Initial Catalog=ProgrammersBlog;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
